--- a/.github/workflows/dockerfile-lint.yml
+++ b/.github/workflows/dockerfile-lint.yml
@@ -11,3 +11,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: jbergstroem/hadolint-gh-action@v1
+    with:
+      error_level: 1
