--- a/.github/workflows/dockerfile-lint.yml
+++ b/.github/workflows/dockerfile-lint.yml
@@ -2,6 +2,8 @@ name: Dockerfile Lint
 on:
   push:
     branches: [ main ]
+    paths:
+        - "**/Dockerfile"
   pull_request:
     branches: [ main ]
 
