Modify test Dockerfile

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -182,7 +182,7 @@ RUN curl -LO ${CURL_OPTIONS} \
 #
 RUN touch /var/lib/rpm/* && \
     yum -y install rpm-build redhat-rpm-config rpmdevtools
-COPY rpmsquirt.sh /rpmsquirt.sh
+ADD rpmsquirt.sh /rpmsquirt.sh
 COPY rpmsquirt.dat /
 RUN /rpmsquirt.sh 
 
