--- a/.github/workflows/dockerfile-lint.yml
+++ b/.github/workflows/dockerfile-lint.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [ main ]
     paths:
-        - "**/Dockerfile"
+        - "./Dockerfile"
   pull_request:
     branches: [ main ]
 
