--- a/.github/workflows/dockerfile-lint.yml
+++ b/.github/workflows/dockerfile-lint.yml
@@ -4,6 +4,7 @@ on:
     branches: [ main ]
     paths:
         - "./Dockerfile"
+        - "./test/Dockerfile"
   pull_request:
     branches: [ main ]
 
