--- a/.github/workflows/dockerfile-lint.yml
+++ b/.github/workflows/dockerfile-lint.yml
@@ -4,7 +4,6 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-
 jobs:
   hadolint:
     runs-on: ubuntu-20.04
@@ -15,3 +14,4 @@ jobs:
         with:
         # ignore warnings (but still fail on errors) from hadolint
           error_level: 1
+          dockerfile: "Dockerfile test/Dockerfile"
