--- a/.github/workflows/dockerfile-lint.yml
+++ b/.github/workflows/dockerfile-lint.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: jbergstroem/hadolint-gh-action@v1
         with:
-          dockerfile: "Dockerfile test/Dockerfile"
+          # dockerfile: "Dockerfile test/Dockerfile"
         # ignore warnings (but still fail on errors) from hadolint
           error_level: 1
   docker:
@@ -23,12 +23,12 @@ jobs:
 
       - name: Build an image from Dockerfile
         run: |
-          docker build -t nginx-website .
+          docker build -t python-webapp .
       
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'nginx-website'
+          image-ref: 'python-webapp'
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
@@ -41,7 +41,7 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          username: "tobiaina"
+          username: ${{ secrets.DOCKERHUB_USERNAME}}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Build and push
@@ -49,4 +49,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: tobiaina/nginx-website:latest 
+          tags: joeshiett/python-webapp:latest 
