--- a/.github/workflows/dockerfile-lint.yml
+++ b/.github/workflows/dockerfile-lint.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: jbergstroem/hadolint-gh-action@v1
         with:
-          # dockerfile: "Dockerfile test/Dockerfile"
+          dockerfile: "Dockerfile bad-dockerfile/Dockerfile"
         # ignore warnings (but still fail on errors) from hadolint
           error_level: 1
 
@@ -25,7 +25,7 @@ jobs:
 
       - name: Build an image from Dockerfile
         run: |
-          docker build . -t bad-dockerfile -f bad-dockerfile/Dockerfile
+          docker build -t bad-dockerfile -f bad-dockerfile/Dockerfile .
       
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
