--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "test-dockerfile"]
-	path = test-dockerfile
-	url = https://github.com/ianmiell/bad-dockerfile.git
+# [submodule "test-dockerfile"]
+# 	path = test-dockerfile
+# 	url = https://github.com/ianmiell/bad-dockerfile.git
