--- a/.github/workflows/dockerfile-lint.yml
+++ b/.github/workflows/dockerfile-lint.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: jbergstroem/hadolint-gh-action@v1
         with:
-          dockerfile: "Dockerfile test-dockerfile/Dockerfile"
+          dockerfile: "Dockerfile bad-test-dockerfile/Dockerfile"
         # ignore warnings (but still fail on errors) from hadolint
           error_level: 1
 
@@ -25,12 +25,12 @@ jobs:
 
       - name: Build an image from Dockerfile
         run: |
-          docker build -t test-dockerfile -f test-dockerfile/Dockerfile .
+          docker build -t bad-test-dockerfile -f bad-test-dockerfile/Dockerfile .
       
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'test-dockerfile'
+          image-ref: 'bad-test-dockerfile'
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
@@ -51,4 +51,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: joeshiett/test-dockerfile:latest 
+          tags: joeshiett/bad-test-dockerfile:latest 
