--- a/.github/workflows/dockerfile-lint.yml
+++ b/.github/workflows/dockerfile-lint.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: jbergstroem/hadolint-gh-action@v1
         with:
-          dockerfile: "Dockerfile bad-test-dockerfile/Dockerfile"
+          dockerfile: "bad-test-dockerfile/Dockerfile"
         # ignore warnings (but still fail on errors) from hadolint
           # error_level: 1
 
